added outputs as comment at the end